# ghostwire

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  GUI_ARCH.md  LICENSE  NEXTGEN.md  NOTES_V1.md  README.md  RELAY.md  TODO.md  WG_ANALYSIS.md  ZQLITE_GHOSTWIRE_INTEGRATION.md  api_test.zig  build.zig  build.zig.zon  test_zqlite  test_zqlite_integration.rs  zqlite_demo  zqlite_demo.rs
.zig-cache/o/05ae44be8409aa6671b0631d7e13dd1c/: dependencies.zig
.zig-cache/o/3f1efe8dc710ce39b5fb2825800f3827/: dependencies.zig
.zig-cache/o/db7ce438f72b0b116916cd6caf66e3b7/: dependencies.zig
assets/: ghostwire.icns
crates/ghostwire-cli/: Cargo.toml
crates/ghostwire-cli/src/: client.rs  config.rs  lib.rs  main.rs  output.rs  utils.rs
crates/ghostwire-cli/src/commands/: apikey.rs  auth.rs  debug.rs  derp.rs  dns.rs  mod.rs  monitor.rs  network.rs  node.rs  policy.rs  route.rs  server.rs  user.rs
crates/ghostwire-client/: Cargo.toml
crates/ghostwire-client/src/: auth.rs  client.rs  config.rs  lib.rs  main.rs  platform.rs  transport.rs  tunnel.rs
crates/ghostwire-common/: Cargo.toml
crates/ghostwire-common/src/: config.rs  crypto.rs  error.rs  lib.rs  quic.rs  types.rs
crates/ghostwire-derp/: Cargo.toml
crates/ghostwire-derp/src/: lib.rs  relay.rs
crates/ghostwire-desktop/: Cargo.toml
crates/ghostwire-desktop/src/: app.rs  client.rs  config.rs  main.rs  tray.rs  types.rs  ui.rs  utils.rs
crates/ghostwire-desktop/src/ui/: about.rs  connection.rs  machines.rs  mod.rs  settings.rs
crates/ghostwire-dns/: Cargo.toml
crates/ghostwire-dns/src/: lib.rs
crates/ghostwire-observability/: Cargo.toml
crates/ghostwire-observability/src/: alerts.rs  dashboard.rs  exporter.rs  health.rs  lib.rs  logging.rs  metrics.rs  tracing_ext.rs
crates/ghostwire-observability/src/templates/: dashboard.html
crates/ghostwire-proto/: Cargo.toml  build.rs
crates/ghostwire-proto/src/: coordination.proto  lib.rs
crates/ghostwire-server/: Cargo.toml
crates/ghostwire-server/src/: main.rs  server.rs
crates/ghostwire-server/src/api/: README.md  authentication.md  grpc.md  grpc.rs  handlers.rs  middleware.rs  mod.rs  rest.md  rest.rs  types.rs
crates/ghostwire-server/src/auth/: jwt.rs  mod.rs  oidc.rs  session.rs
crates/ghostwire-server/src/coordinator/: README.md  heartbeat.rs  key_exchange.rs  mod.rs  network_map.rs  node_manager.rs  session_manager.rs
crates/ghostwire-server/src/database/: connection.rs  migrations.rs  mod.rs  models.rs  operations.rs  schema.rs  zqlite_connection.rs
crates/ghostwire-server/src/derp/: mod.rs  protocol.rs  server.rs  stun.rs
crates/ghostwire-server/src/dns/: backends.rs  mod.rs  resolver.rs
crates/ghostwire-server/src/netmap/: distributor.rs  generator.rs  mod.rs  types.rs
crates/ghostwire-server/src/policy/: engine.rs  evaluator.rs  mod.rs  parser.rs  types.rs
crates/ghostwire-tests/: Cargo.toml  README.md
crates/ghostwire-tests/benches/: connection_establishment.rs  derp_relay_performance.rs  encryption_performance.rs  mesh_scaling.rs  network_throughput.rs
crates/ghostwire-tests/src/: common.rs  lib.rs  scenarios.rs  utils.rs
crates/ghostwire-tests/src/integration/: auth.rs  database.rs  derp.rs  dns.rs  mesh.rs  mod.rs  server.rs
crates/ghostwire-tests/src/performance/: crypto.rs  mod.rs  network.rs  server.rs
crates/ghostwire-web/: Cargo.toml  Leptos.toml
crates/ghostwire-web/src/: app.rs  lib.rs  main.rs  types.rs
crates/ghostwire-web/src/api/: auth.rs  client.rs  dns.rs  machines.rs  mod.rs  routes.rs  users.rs  websocket.rs
crates/ghostwire-web/src/auth/: mod.rs
crates/ghostwire-web/src/components/: button.rs  card.rs  footer.rs  header.rs  icons.rs  machine_details.rs  mod.rs  network_topology.rs  notifications.rs  sharing_panel.rs  shell.rs  sidebar.rs
crates/ghostwire-web/src/pages/: auth.rs  dashboard.rs  dns.rs  machines.rs  mod.rs  not_found.rs  policies.rs  settings.rs  users.rs
crates/ghostwire-web/src/types/: mod.rs
crates/ghostwire-web/src/utils/: format.rs  mod.rs  time.rs  validation.rs
crates/ghostwire-web/style/: main.scss
crates/ghostwire-wg/: Cargo.toml
crates/ghostwire-wg/src/: crypto.rs  engine.rs  hybrid.rs  kernel.rs  lib.rs  optimized.rs  packet.rs  quic_bridge.rs
crates/zqlite-rs/: Cargo.toml  build.rs
crates/zqlite-rs/src/: async_connection.rs  connection.rs  error.rs  lib.rs  metrics.rs  pool.rs  types.rs
docs/: GITHUB.md  GOOGLE.md  MICROSOFT_AZURE.md  NGINX.md  README.md  SSO.md  architecture.md  quick-start.md
policies/: default.hujson
scripts/: run-tests.sh
src/: main.zig
src/ghostwire-control/: root.zig
src/ghostwire-core/: connection.zig  crypto.zig  handshake.zig  protocol.zig  root.zig  stream.zig
src/ghostwire-ice/: candidates.zig  ice.zig  nat.zig  root.zig  stun.zig
src/ghostwire-relay/: quic_relay.zig  root.zig  websocket_relay.zig
src/ghostwire-transport/: congestion.zig  packet.zig  quic.zig  root.zig  udp.zig
