[package]
name = "ghostwire-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gwctl"
path = "src/main.rs"

[dependencies]
ghostwire-common = { path = "../ghostwire-common" }
ghostwire-proto = { path = "../ghostwire-proto" }

# Core runtime
tokio = { workspace = true, features = ["full"] }

# CLI framework
clap = { workspace = true, features = ["derive", "color", "suggestions"] }
clap_complete = "4.5"

# HTTP client for API calls
reqwest = { workspace = true, features = ["json", "stream"] }
url = { workspace = true }

# gRPC client
tonic = { workspace = true }
tonic-health = "0.11"

# Config & serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# Terminal UI and output formatting
comfy-table = "7.1"
tabled = "0.15"
colored = "2.1"
indicatif = "0.17"
console = "0.15"

# Configuration and files
directories = "5.0"
shellexpand = "3.1"

# Networking
ipnet = { workspace = true }
cidr = { workspace = true }

# Utilities
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# System integration
keyring = "2.3"

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Async utilities
futures = "0.3"
tokio-stream = "0.1"

# Interactive features
qrcode = "0.14"
image = "0.24"
dialoguer = "0.11"