[package]
name = "ghostwire-derp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ghostwire-derp"
path = "src/main.rs"

[dependencies]
ghostwire-common = { path = "../ghostwire-common" }
ghostwire-proto = { path = "../ghostwire-proto" }

# Core runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# QUIC & networking
quinn = { workspace = true }
rustls = { workspace = true }

# HTTP for fallback/admin
axum = { workspace = true }
tower = { workspace = true }

# Config & serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }

# CLI
clap = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }