[package]
name = "ghostwire-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Native desktop client for GhostWire mesh VPN with system tray integration"

[dependencies]
# Core async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

# UI framework
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true, features = ["all_loaders"] }
egui_plot = { workspace = true }
rfd = { workspace = true }

# System tray integration
tray-icon = { workspace = true }
image = { workspace = true }

# Configuration and utilities
dirs = { workspace = true }
hostname = { workspace = true }
fastrand = { workspace = true }

# HTTP client and serialization
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }

# Networking and crypto
uuid = { workspace = true, features = ["v4", "serde"] }

# Logging and error handling
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }
toml = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true }

# GhostWire crates
ghostwire-common = { path = "../ghostwire-common" }
ghostwire-proto = { path = "../ghostwire-proto" }
ghostwire-client = { path = "../ghostwire-client" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(unix)'.dependencies]
# gtk = "0.18"

[[bin]]
name = "ghostwire-desktop"
path = "src/main.rs"

[package.metadata.bundle]
name = "GhostWire"
identifier = "com.ghostwire.desktop"
icon = ["icon.png"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) 2024 GhostWire Team"
category = "Network"
short_description = "Secure mesh VPN client"
long_description = """
GhostWire Desktop is a native cross-platform client for the GhostWire mesh VPN system.
It provides a beautiful interface for managing your mesh network connections with system tray integration.
"""