[package]
name = "ghostwire-web"
version = "0.1.0"
edition = "2021"
description = "GhostWire Web Admin Interface - Modern Leptos-based web UI for mesh VPN management"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Web framework
leptos = { version = "0.6", features = ["csr", "hydrate", "ssr"] }
leptos_axum = { version = "0.6", optional = true }
leptos_meta = { version = "0.6", features = ["csr", "hydrate", "ssr"] }
leptos_router = { version = "0.6", features = ["csr", "hydrate", "ssr"] }

# HTTP and async
axum = { version = "0.7", optional = true, features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["fs", "cors"], optional = true }

# WebAssembly
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Serialization and API
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }

# UI components and styling
icondata = "0.4"
leptos_icons = "0.3"
tailwind_fuse = "0.3"

# WebSocket and real-time
ws_stream_wasm = "0.7"
futures = "0.3"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "wasm-bindgen"] }
anyhow = "1.0"
thiserror = "1.0"

# Authentication
jsonwebtoken = "9"

[features]
default = ["csr"]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:tower",
  "dep:tower-http",
  "dep:leptos_axum",
  "leptos/ssr",
]

[package.metadata.leptos]
output-name = "ghostwire-web"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"

